refactor: improve code documentation and enhance clarity in various controllers and repositories